# redact-pdf

./: README.md  pyproject.toml
src/: main.py
src/controllers/: redaction_controller.py
src/models/: pdf_document.py
src/views/: main_window.py  pdf_viewer.py
