[project]
name = "redact-pdf"
version = "0.1.0"
description = "Aplicación para censurar información en PDFs"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.26.6",
    "pyqt6>=6.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redact_pdf"]

